# Crucible

./: CHANGELOG.md  README.md  get-crucible.sh  gtnh_tree.py  install.sh  pyproject.toml
crucible/: __init__.py  __main__.py
crucible.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
crucible/data/: __init__.py  backup_manager.py  instance_manager.py  instance_model.py
crucible/mods/: __init__.py
crucible/process/: __init__.py  log_watcher.py  tmux_manager.py  watchdog.py
crucible/ui/: add_dialog.py  instance_panel.py  main_window.py  sidebar.py  theme.py
crucible/ui/tabs/: __init__.py  backup_tab.py  config_tab.py  console_tab.py  info_tab.py  mods_tab.py  notes_tab.py  players_tab.py
crucible/utils/: __init__.py  term.py
