[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.3.5"
description = "GTNH Server Manager"
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.5"]

[project.scripts]
crucible = "crucible.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crucible*"]
